[gd_scene load_steps=2 format=3]

[ext_resource type="Script" path="res://scripts/ui/serving_ui.gd" id="1_serve"]

[node name="ServingUI" type="CanvasLayer"]
layer = 12
script = ExtResource("1_serve")

[node name="Panel" type="Panel" parent="."]
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -130.0
offset_top = -70.0
offset_right = 130.0
offset_bottom = 70.0

[node name="Title" type="Label" parent="Panel"]
offset_left = 4.0
offset_top = 2.0
offset_right = 256.0
offset_bottom = 14.0
text = "서빙 - 위스키를 선택하세요"

[node name="CustomerInfo" type="VBoxContainer" parent="Panel"]
offset_left = 4.0
offset_top = 18.0
offset_right = 126.0
offset_bottom = 110.0

[node name="WhiskyList" type="VBoxContainer" parent="Panel"]
offset_left = 130.0
offset_top = 18.0
offset_right = 256.0
offset_bottom = 110.0

[node name="ResultLabel" type="Label" parent="Panel"]
anchors_preset = 12
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = 4.0
offset_top = -18.0
offset_right = -4.0
offset_bottom = -2.0
horizontal_alignment = 1
text = ""

[node name="CloseHint" type="Label" parent="Panel"]
anchors_preset = 3
anchor_left = 1.0
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = -40.0
offset_top = -14.0
offset_right = -2.0
offset_bottom = -2.0
horizontal_alignment = 2
text = "[E] 닫기"
